--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,9 +1,13 @@
 FROM python:3.12.4-bookworm
 
-COPY . /app
-
 WORKDIR /app
+
+COPY requirements.txt requirements.txt
 
 RUN pip install -r requirements.txt
 
-CMD ["python","app.py"]
+COPY . .
+
+CMD ["python", "app.py"]
+
+
